--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
