--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -24,14 +24,14 @@
     <!-- Collect the nav links -->
     <div class="collapse navbar-collapse" id="header-navbar">
       <ul class="nav navbar-nav">
-        <li><a href="/">LMOA</a></li>
-        <li class="active"><a href="/investigacion">Investigación</a></li>
-	<li><a href="/publicaciones">Publicaciones</a></li>
-	<li><a href="/integrantes">Integrantes</a></li>
-	<li><a href="/colaboraciones">Colaboraciones</a></li>
-	<li><a href="/fondos">Fondos</a></li>
-	<li><a href="/fotos">Fotos</a></li>
-	<li><a href="/contacto">Contacto</a></li>
+        <li><a href="{{ site.url }}/">LMOA</a></li>
+        <li class="active"><a href="{{ site.url }}/investigacion">Investigación</a></li>
+	<li><a href="{{ site.url }}/publicaciones">Publicaciones</a></li>
+	<li><a href="{{ site.url }}/integrantes">Integrantes</a></li>
+	<li><a href="{{ site.url }}/colaboraciones">Colaboraciones</a></li>
+	<li><a href="{{ site.url }}/fondos">Fondos</a></li>
+	<li><a href="{{ site.url }}/fotos">Fotos</a></li>
+	<li><a href="{{ site.url }}/contacto">Contacto</a></li>
       </ul>
     </div><!--/navbar-collapse -->
 
