--- a/_layouts/integrante.html
+++ b/_layouts/integrante.html
@@ -11,6 +11,6 @@ layout: page
     
   </div><!--/col-md-8 -->
   <div class="col-md-4">
-    <img class="img-responsive" src="{{ page.img }}" alt="picture of {{ page.name }}">
+    <img class="img-responsive" src="{{ site.url }}{{ page.img }}" alt="picture of {{ page.name }}">
   </div><!--/col-md-4 -->
 </div><!--/row -->
