remove banner in small resolutions

--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,4 +1,4 @@
-<div class="logo">
+<div class="logo hidden-xs">
   <header class="header-hidden">
     <h2>Banner del grupo</h2>
   </header>
@@ -8,4 +8,5 @@
     <p id="banner_name">Laboratorio de Microscopia Óptica Avanzada</p>
     <p id="banner_place">Universidad Nacional Río Cuarto</p>
   </div><!--/container -->
+  
 </div><!--/logo -->
