--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -17,7 +17,7 @@
       </button>
       
       <!-- Logo -->
-      <!-- <a class="navbar-brand" href="#">LOGO</a> -->
+      <a class="navbar-brand visible-xs-inline" href="#">LMOA</a>
       
     </div><!--/navbar-header -->
 
